done result, discussion, conclusion

--- a/report/Abstract/Abstract.tex
+++ b/report/Abstract/Abstract.tex
@@ -4,6 +4,6 @@
 Compiler optimizations are essential for making programs run faster and improving overall system performance. 
 Modern compilers like GraalVM use complex transformation pipelines, typically written in imperative languages for fine-grained control. However, implementation of optimizations in imperative languages is often challenging and error-prone. 
 This project proposes using Prolog, a logic programming language, to express compiler optimizations declaratively for greater clarity and maintainability.
-This thesis presents the integration of Prolog-based optimization techniques into the GraalVM compiler framework and evaluates their performance compared to native GraalVM optimizations. The project involves several key components: (1) converting GraalVM’s intermediate representation (IR) into Prolog terms that describe its structure; (2) expressing optimization strategies declaratively as Prolog rules; (3) querying these rules to identify potential optimization opportunities; and (4) parsing the results to update the IR and apply optimizations.
+This thesis presents the integration of Prolog-based optimization techniques into the GraalVM compiler framework and evaluates their performance compared to native GraalVM optimizations. The project involves: (1) converting GraalVM’s intermediate representation (IR) into Prolog terms that describe its structure; (2) expressing optimization strategies declaratively as Prolog rules; (3) querying these rules to identify potential optimization opportunities; and (4) parsing the results to update the IR and apply optimizations.
 Prolog’s declarative syntax facilitates clear and concise expression of optimization logic. Benchmark results indicate that stateless optimizations such as canonicalization perform efficiently within this framework. However, stateful optimizations, including conditional elimination, encounter significant overheads largely attributable to the startup latency of the Prolog engine (Projog), highlighting current performance limitations. The findings suggest that while Prolog integration holds promise for enhancing optimization expressiveness, further improvements in Prolog engine performance are necessary to fully realize its potential in compiler optimization tasks.
 This work contributes to advancing compiler technology by exploring the feasibility and practical implications of leveraging logic programming in modern compiler frameworks, opening avenues for future research in this domain.
