--- a/report/References/Bibliography.bib
+++ b/report/References/Bibliography.bib
@@ -175,7 +175,7 @@
    author = {Gilles Duboscq and Lukas Stadler and Thomas Würthinger and Doug Simon and Christian Wimmer and Hanspeter Mössenböck},
    year={2013},
    url={https://api.semanticscholar.org/CorpusID:52231504},
-   booktitle={Conference: 2nd Asia-Pacific Programming Languages and Compilers WorkshopAt: Shenzhen, China}
+   booktitle={2nd Asia-Pacific Programming Languages and Compilers}
 }
 
 @inproceedings{Ron1991,
